<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="32dp">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/button"
            android:layout_height="@dimen/button"
            android:layout_alignParentEnd="false"
            android:background="@null"
            android:contentDescription="@string/chat"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <ImageButton
            android:id="@+id/chatButton"
            android:layout_width="@dimen/button"
            android:layout_height="@dimen/button"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:contentDescription="@string/chat"
            app:srcCompat="@drawable/ic_baseline_chat_24" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="@dimen/button"
            android:layout_height="@dimen/button"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:background="@null"
            android:contentDescription="@string/chat"
            app:srcCompat="@drawable/ic_baseline_edit_24" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:cardBackgroundColor="@color/light_gray"
        app:cardCornerRadius="64dp">

        <ImageView
            android:id="@+id/user_profilepicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/default_user_image"
            android:src="@drawable/ic_baseline_person_24" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_user_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tags_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_score"
            app:chipIcon="@drawable/ic_baseline_star_24"
            app:chipIconTint="@color/star"
            app:chipIconVisible="true" />

    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:id="@+id/skills_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_divider"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skills_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skills_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/skills_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_divider"
            android:background="@color/light_gray"
            android:clickable="true"
            android:focusable="true"
            tools:itemCount="3"
            tools:listitem="@layout/listitem_skill" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bio_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_divider2x"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bio_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio_label" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_divider"
            android:background="@color/light_gray"
            android:paddingLeft="@dimen/listitem_horizontal_padding"
            android:paddingTop="@dimen/listitem_vertical_padding"
            android:paddingRight="@dimen/listitem_horizontal_padding"
            android:paddingBottom="@dimen/listitem_vertical_padding"
            android:text="@string/default_bio"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/links_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_divider2x"
        tools:itemCount="3"
        tools:listitem="@layout/listitem_link" >

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>